--- a/src/Components/SideMenu.module.css
+++ b/src/Components/SideMenu.module.css
@@ -1,9 +1,11 @@
 .wrapper {
   width: 270px;
   height: 100vh;
-  background-color: #fff;
+  background-color: var(--secondary-bg);
   border-right: 1px solid #e1e0e0;
   padding: 15px 0;
+  position: fixed;
+  transition: 0.2s ease;
 }
 .logo {
   display: flex;
@@ -54,8 +56,10 @@
   background-color: transparent;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+  transition: 0.2s ease;
 }
 .menu a:global(.active) li .indictor {
+  transition: 0.2s ease;
   background-color: green;
 }
 .menu a:global(.active) li p {
@@ -69,11 +73,12 @@
 .menu h4 {
   padding: 17px 12px 0;
   font-size: 14px;
-  color: rgb(73, 72, 72);
+  color: var(--text-color);
+  /* color: rgb(73, 72, 72); */
 }
 .menu li p {
   font-size: 13px;
-  color: rgb(113, 111, 111);
+  color: var(--secondary-text-color);
   font-weight: 500;
 }
 .menu li svg {
